Fixed window sizing on mobile and menu toggling

--- a/web/web/src/app/app.component.css
+++ b/web/web/src/app/app.component.css
@@ -1,3 +1,3 @@
 .main {
-    min-width: 750px;
+    min-width: 950px;
 }
